compiler/tests/success/param.jazz
param int n = 4;

fn f(reg u64[n] x) -> reg u64[n] {
reg u64[n] y;
inline int i;
for i = 0 to n { y[i] = x[i]; }
return y;
}
