compiler/tests/fail/array_expansion/x86-64/index_out_of_bounds.jazz
export fn main () -> reg u64 {
  reg u64[4] r;
  reg u64 res;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  res = r[5];

  return res;
}
